--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-A quick & dirty script I wrote to compile the kernel
+A quick & dirty script I wrote to compile the kernel, a conversion from bash to python
 
